# PyRogi

./: README.md  pyproject.toml  rogi.code-workspace
src/pyrogi/: __init__.py  colors.py  config.json  graphical_chart.json  naming_conventions.json  permatools.py  rock_glacier_inventory.py  rock_glacier_unit.py  rogi.py
src/rogi/: __init__.py  main_axis.py  rock_glacier.py  rock_glacier_inventory.py  rogi_functions.py
tests/: load.py  no_test_rock_glacier_unit.py  test_rock_glacier_inventory.py  test_rock_glacier_unit.py  ttttt.ipynb
tests/_test_data/: cropping.gpkg
tests/test_data/: cropping.gpkg
