[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rogi"
version = "0.0.0"
authors = [
  { name="Thibaut Duvanel", email="thibaut.duvanel@unil.ch" },
]
description = "create and analyze rock glaciers inventories"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]